plugins {
    id 'net.fabricmc.fabric-loom' version '1.17.21'
}
version = project.mod_version
group = 'tech.gulp'
base { archivesName = 'lavavisual' }
repositories { mavenCentral() }
dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
processResources {
    inputs.property 'version', project.version
    filesMatching('fabric.mod.json') { expand version: project.version }
}
java {
    toolchain.languageVersion = JavaLanguageVersion.of(25)
    withSourcesJar()
}
tasks.withType(JavaCompile).configureEach { options.release = 25; options.encoding = 'UTF-8' }
test { useJUnitPlatform() }
jar { from('LICENSE') }

tasks.register('apiSignatures') {
    doLast {
        def names = [
            'net.minecraft.client.renderer.ItemInHandRenderer',
            'net.minecraft.client.sounds.SoundManager',
            'net.minecraft.client.resources.sounds.SoundInstance',
            'net.minecraft.client.resources.sounds.SimpleSoundInstance',
            'net.minecraft.client.gui.GuiGraphicsExtractor',
            'net.minecraft.client.gui.Font',
            'net.minecraft.network.chat.Style',
            'net.minecraft.client.player.AbstractClientPlayer',
            'net.minecraft.world.entity.player.PlayerSkin',
            'net.minecraft.network.chat.FontDescription$Resource',
            'com.mojang.blaze3d.PrimitiveTopology',
            'com.mojang.blaze3d.platform.CompareOp',
            'net.minecraft.client.gui.components.PlayerFaceRenderer',
            'net.minecraft.network.protocol.game.ClientboundEntityEventPacket',
            'net.minecraft.client.multiplayer.ClientPacketListener'
        ]
        def result = new StringBuilder()
        names.each { name ->
            def p = new ProcessBuilder('javap', '-classpath', configurations.compileClasspath.asPath, '-p', name).redirectErrorStream(true).start()
            result.append(p.inputStream.text).append('\n'); p.waitFor()
        }
        file('build').mkdirs()
        file('build/api-signatures.txt').text = result.toString()
    }
}
